# openni2_camera

./: .travis.yml  CHANGELOG.rst  CMakeLists.txt  FindNiTE2.cmake  FindOpenNI2.cmake  LICENSE  README.md  build_deb_commands  openni2_nodelets.xml  package.xml
.github/workflows/: ci.yml  main.yml
cfg/: OpenNI2.cfg
etc/: NiTE.ini
include/NiTE-2/: NiTE.h  NiteCAPI.h  NiteCTypes.h  NiteVersion.h
include/openni2_camera/: nite2_hand_tracker_frame_listener.h  nite2_user_tracker_frame_listener.h  openni2_convert.h  openni2_device.h  openni2_device_info.h  openni2_device_manager.h  openni2_driver.h  openni2_frame_listener.h  openni2_timer_filter.h  openni2_video_mode.h
launch/: camera_only.launch.py  camera_with_cloud.launch.py  kinect_frames.launch  openni.launch  openni2.launch  openni2_tf_prefix.launch
launch/includes/: color.launch  depth.launch  device.launch  device.launch.xml  ir.launch  manager.launch  pointclouds.launch  processing.launch
openni2_camera/: CHANGELOG.rst  CMakeLists.txt  package.xml
openni2_camera/cfg/: OpenNI2.cfg
openni2_camera/include/openni2_camera/: openni2_device.h  openni2_device_info.h  openni2_device_manager.h  openni2_driver.h  openni2_frame_listener.h
openni2_camera/launch/: camera_only.launch.py  camera_with_cloud.launch.py  camera_with_cloud_norgb.launch.py  tfs.launch.py
openni2_camera/ros/: openni2_camera_nodelet.cpp
openni2_camera/src/: openni2_device.cpp  openni2_device_manager.cpp  openni2_driver.cpp  openni2_frame_listener.cpp  usb_reset.c
openni2_camera/test/: test_wrapper.cpp
openni2_launch/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
openni2_launch/doc/: Makefile  conf.py  index.rst
openni2_launch/launch/: kinect_frames.launch  openni2.launch  openni2_tf_prefix.launch
openni2_launch/launch/includes/: color.launch  depth.launch  device.launch  device.launch.xml  ir.launch  manager.launch  pointclouds.launch  processing.launch
openni2_launch/src/openni2_launch/: wtf_plugin.py
ros/: openni2_camera_node.cpp  openni2_camera_nodelet.cpp
src/: list_devices.cpp  nite2_hand_tracker_frame_listener.cpp  nite2_user_tracker_frame_listener.cpp  openni2_convert.cpp  openni2_device.cpp  openni2_device_info.cpp  openni2_device_manager.cpp  openni2_driver.cpp  openni2_exception.cpp  openni2_frame_listener.cpp  openni2_video_mode.cpp  usb_reset.c
test/: test_wrapper.cpp
