<?xml version="1.0"?>
<package>
  <name>openni2_camera</name>
  <version>0.1.3</version>
  <description>Drivers for the Asus Xtion and Primesense Devices. For using a kinect
  with ROS, try the <a href="http://wiki.ros.org/freenect_stack">freenect stack</a> 
  This fork authored by jordi.pages@pal-robotics.com integrates 
  the NiTE2 library for gesture recognition based on hand tracking.
  </description>
  <author email="jkammerl@todo.todo">Julius Kammerl</author>
  <license>BSD</license>

  <maintainer email="jordi.pages@pal-robotics.com">Jordi Pages</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>camera_info_manager</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>pal_vision_msgs</build_depend>

  <run_depend>camera_info_manager</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>pal_vision_msgs</run_depend>

  <export>
    <nodelet plugin="${prefix}/openni2_nodelets.xml"/>
  </export>
</package>
