<package>
  <name>openni2_launch</name>
  <version>0.2.2</version>
  <description>
    Launch files to start the openni2_camera drivers using rgbd_launch.
  </description>
  <maintainer email="developers@unboundedrobotics.com">Michael Ferguson</maintainer>
  <license>BSD</license>

  <author email="kammerl@willowgarage.com">Julius Kammerl</author>
  <author email="developers@unboundedrobotics.com">Michael Ferguson</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rgbd_launch</run_depend>
  <run_depend>depth_image_proc</run_depend>
  <run_depend>image_proc</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>openni2_camera</run_depend>
  <run_depend>tf</run_depend>

</package>
