<?xml version="1.0"?>
<package format="3">
  <name>openni2_camera</name>
  <version>2.1.0</version>
  <description>Drivers for the Asus Xtion and Primesense Devices. For using a kinect
  with ROS, try the <a href="http://wiki.ros.org/freenect_stack">freenect stack</a> 
  </description>
  <author email="jkammerl@todo.todo">Julius Kammerl</author>
  <license>BSD</license>

  <maintainer email="mike@vanadiumlabs.com">Michael Ferguson</maintainer>
  <maintainer email="iisaac.saito@gmail.com">Isaac I. Y. Saito</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>pkg-config</build_depend>
  <depend>builtin_interfaces</depend>
  <depend>camera_info_manager</depend>
  <depend>libopenni2-dev</depend>
  <depend>sensor_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>image_transport</depend>
  <exec_depend>depth_image_proc</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
