<package>
  <name>openni2_launch</name>
  <version>0.4.2</version>
  <description>
    Launch files to start the openni2_camera drivers using rgbd_launch.
  </description>
  <maintainer email="isaac.saito@plusonerobotics.com">Isaac I. Y. Saito</maintainer>
  <license>BSD</license>

  <author email="kammerl@willowgarage.com">Julius Kammerl</author>
  <author email="developers@unboundedrobotics.com">Michael Ferguson</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>python-catkin-pkg</build_depend>
  <build_depend>roslaunch</build_depend>  <!-- For launch check -->
  <run_depend>rgbd_launch</run_depend>
  <run_depend>depth_image_proc</run_depend>
  <run_depend>image_proc</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>openni2_camera</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roswtf</run_depend>  
  <run_depend>tf</run_depend>
  <run_depend>usbutils</run_depend>
  <export>
    <rosdoc config="rosdoc.yaml"/>  
    <roswtf plugin="openni2_launch.wtf_plugin" />    
  </export>
</package>
