<?xml version="1.0"?>
<package format="3">
  <name>openni2_launch</name>
  <version>1.6.1</version>
  <description>
    Launch files to start the openni2_camera drivers using rgbd_launch.
  </description>
  <maintainer email="isaac.saito@plusonerobotics.com">Isaac I. Y. Saito</maintainer>
  <license>BSD</license>

  <author email="kammerl@willowgarage.com">Julius Kammerl</author>
  <author email="developers@unboundedrobotics.com">Michael Ferguson</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend condition="$ROS_PYTHON_VERSION == 2">python-catkin-pkg</depend>
  <depend condition="$ROS_PYTHON_VERSION == 3">python3-catkin-pkg</depend>
  <build_depend>roslaunch</build_depend>  <!-- For launch check -->
  <exec_depend>rgbd_launch</exec_depend>
  <exec_depend>depth_image_proc</exec_depend>
  <exec_depend>image_proc</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>openni2_camera</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>roswtf</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>usbutils</exec_depend>
  <export>
    <rosdoc config="rosdoc.yaml"/>  
    <roswtf plugin="openni2_launch.wtf_plugin" />    
  </export>
</package>
